# ds-intern-challenge-submission

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: climate_claims_sample.csv  synthetic_claims.csv
docs/: ASSUMPTIONS_TEMPLATE.md  BENCHMARK_DESIGN_TEMPLATE.md  CANDIDATE_TEST_PROTOCOL.md  RESEARCH_MATRIX_TEMPLATE.md  WORKING_WITH_US.md  benchmark_design.md  run_climate_test.py
outputs/: assumptions.md  demo_results.csv  recommendation.md  research_matrix.md  results.csv
report/: FINAL_REPORT_TEMPLATE.md  demo_report.html  final_report.md
src/benchmark_challenge/: __init__.py  make_report.py  metrics.py  run_climate_test.py  run_demo.py
src/specialist_baseline_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_metrics.py
