[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specialist-baseline-challenge"
version = "0.1.0"
description = "Minimal sandbox for validating a specialist-model benchmark"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5"]
models = ["transformers>=4.40", "datasets>=2.18", "torch>=2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
